force http / force non www

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,14 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # BEGIN Force HTTP
+    RewriteEngine On
+    RewriteCond %{SERVER_PORT} 443
+    RewriteRule ^(.*)$ http://miragevisualisation.com/$1 [R=301,L]
+    # END Force HTTP
+
+   RewriteEngine On
+   RewriteCond %{HTTP_HOST} www.miragevisualisation.com
+   RewriteRule (.*) http://miragevisualisation.com/$1 [R=301,L]
 </IfModule>
