--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "artesaos/seotools": "^0.14.0",
         "charlotte/administration": "^1.0.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
