--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "owl.carousel": "^2.3.4",
         "parallax-js": "^3.1.0"
     }
 }
